Prevent name header from wrapping

--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -17,6 +17,7 @@ header {
 
 .name {
   font-family: "courgette";
+  white-space: nowrap;
   display: inline-block;
   padding-left: 16px;
   margin: 0;
